tests/fw_rules_tests/policies/label_expr_test_policy5.yaml

apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: enable-from-ipblock-to-isolated-by-label-and
  namespace: default
spec:
  podSelector:
    matchLabels:
      app: G
      tier: W
  policyTypes:
  - Ingress
  ingress:
    - from:
      - ipBlock:
          cidr: 0.0.0.0/0     # All destinations

---




apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: deny-all-default-new
  namespace: default
spec:
  podSelector: {}
  policyTypes:
  - Ingress
  - Egress
